# ChangeLog for media-gfx/pqiv
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-gfx/pqiv/ChangeLog,v 1.1 2007/05/27 17:16:39 drac Exp $

*pqiv-0.1 (27 May 2007)

  27 May 2007; Samuli Suominen <drac@gentoo.org> +metadata.xml,
  +pqiv-0.1.ebuild:
  Initial commit for bug 166009. Ebuild and program itself by Phillip Berndt.
