@@ -1,6 +1,9 @@
 # ChangeLog for media-gfx/pqiv
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-gfx/pqiv/ChangeLog,v 1.1 2007/05/27 17:16:39 drac Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-gfx/pqiv/ChangeLog,v 1.2 2007/05/27 19:43:23 drac Exp $
+
+  27 May 2007; Samuli Suominen <drac@gentoo.org> pqiv-0.1.ebuild:
+  Make HOMEPAGE more accurate.
 
 *pqiv-0.1 (27 May 2007)
 
